- Add the Sendgrid API to the documention

--- a/documentation/docset/Contents/Resources/Documents/hierarchy.html
+++ b/documentation/docset/Contents/Resources/Documents/hierarchy.html
@@ -93,6 +93,16 @@
 	</ul>
 </li>
 	
+		<li><a href="Classes/Sendgrid.html">Sendgrid</a></li>
+	
+		<li><a href="Classes/SendgridAttachment.html">SendgridAttachment</a></li>
+	
+		<li><a href="Classes/SendgridFilter.html">SendgridFilter</a></li>
+	
+		<li><a href="Classes/SendgridMessage.html">SendgridMessage</a></li>
+	
+		<li><a href="Classes/SendgridSmtpOptions.html">SendgridSmtpOptions</a></li>
+	
 	</ul>
 </li>
 	
